# SAID-LAM-private

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MODEL  README.md  build_log.txt  compare_backends.py  pyproject.toml
.github/workflows/: release.yml
docs/: COMPILATION.md  COMPLETE_SUBMISSION_GUIDE.md  HUGGINGFACE_PUBLISHING.md  MTEB_LONGEMBED_SUBMISSION.md  PYPI_400_FIX.md  cloudflare.md  worker.js  wrangler.toml
docs/.wrangler/cache/: cf.json  wrangler-account.json
hf_model_card/: README.md  config.json  tokenizer_config.json
lam/: __init__.py
said_lam/: __init__.py  said_lam.py
scripts/: copy_so_after_build.sh  dev_setup.sh  steps.md
src/: crystalline.rs  engine.rs  lib.rs  license.rs  model.rs  sca_dropin.rs  secrets.rs  storage.rs
tests/: README.md  comprehensive_test.py  diagnose_needle_ndcg.py  diagnose_passkey_ndcg.py  mteb_test.py  quick_mteb_test.py  requirements.txt  run_all_tests.py  smoke_lam_encode.py  test_ablation_study.py  test_crystalline_mteb.py  test_embeddings.py  test_linear_scaling.py  test_long_context.py  test_matryoshka.py  test_pearson_score.py  test_readme_snippets.py  test_said_lam.py
tests/smoke_results/: BIOSSES.json  LEMBNarrativeQARetrieval.json  LEMBNeedleRetrieval.json  LEMBPasskeyRetrieval.json  LEMBQMSumRetrieval.json  LEMBSummScreenFDRetrieval.json  LEMBWikimQARetrieval.json  SICK-R.json  STS12.json  STS13.json  STS14.json  STS15.json  STS17.json  STS22.v2.json  STSBenchmark.json
